# caso

./: .coveragerc  .gbp.conf  .gitignore  .mailmap  .stestr.conf  .travis.yml  CONTRIBUTING.md  HACKING.rst  README.md  README.rst  do_release.sh  mypy.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: packaging.yml  python-publish.yml  python-test.yml
caso/: __init__.py  config.py  exception.py  keystone_client.py  loadables.py  loading.py  log.py  manager.py  opts.py  record.py  ssm.py  utils.py
caso/_cmd/: extract.py  projects.py
caso/cmd/: extract.py
caso/contrib/config/: generator.py
caso/extract/: __init__.py  base.py  ceilometer.py  manager.py  nova.py  utils.py
caso/extract/openstack/: __init__.py  base.py  cinder.py  neutron.py  nova.py  swift.py
caso/extract/openstack/samples/: cinder-sample-record.xml  nova-sample-record.txt  swift-sample-record.xml
caso/messenger/: __init__.py  logstash.py  noop.py  ssm.py
caso/tests/: __init__.py  base.py  test_caso.py  test_manager.py  test_record.py
caso/tests/extract/: __init__.py  test_manager.py  test_nova.py
debian/: caso-doc.doc-base  caso.install  changelog  control  cron.hourly  postinst  rules
doc/: requirements.txt
doc/source/: conf.py  configuration-file.rst  configuration.rst  index.rst  installation.rst  multi-region.rst  release-notes.rst  troubleshooting.rst  usage.rst
doc/source/static/: caso-diagram.drawio  caso.conf.sample
etc/: caso.conf.sample  voms.json.sample
etc/caso/: caso-config-generator.conf  caso.conf.sample  voms.json.sample
packaging/debian/: README.Debian  changelog  control  copyright  cron.hourly  rules
packaging/redhat/: caso.spec
releasenotes/notes/: allow-to-load-an-extractor-list-fd1f6905d0d01383.yaml  default-to-all-extractors-0da9448a00091bc1.yaml  deprecate-voms-mapping-80cfda2246ec43e9.yaml  gpu-accounting-082a62b7254d29bd.yaml  multi-region-support-4395450dfbc4e8a3.yaml  new-release-notes-b79c3d7a778fc946.yaml  new-ussuri-configuration-03b764a39f461eda.yaml  option-deprecation-a4eba5fa1a362815.yaml  refactor-extractor-e826c64087e17065.yaml  reno.cache  require-system-scope-67d0d11681beea27.yaml  support-for-storage-34675eff431608d1.yaml  tags-for-projects-3b9b6b5a92bcc6df.yaml
tools/: generate_sample.sh
