[metadata]
name = caso
summary = cASO is an OpenStack Accounting extractor.
description-file =
    README.md
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
license = Apache-2
home-page = http://github.com/IFCA/caso
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    caso
data_files = 
    etc/caso/ = etc/caso/*

[entry_points]

oslo.config.opts =
    caso = caso.opts:list_opts

console_scripts = 
    caso-extract = caso.cmd.extract:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = caso/locale
domain = caso

[update_catalog]
domain = caso
output_dir = caso/locale
input_file = caso/locale/caso.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = caso/locale/caso.pot
