[metadata]
name = caso
summary = cASO is an OpenStack Accounting extractor.
description_file = README.md
description_content_type = text/markdown; charset=UTF-8

author = Alvaro Lopez Garcia
author_email = aloga@ifca.unican.es

home_page = http://github.com/IFCA/caso
project_urls =
    Bug Tracker = https://github.com/IFCA/caso/issues
    Documentation = https://caso.readthedocs.io/

license = Apache-2
license_file = LICENSE

python_requires = >=3.6

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    caso
data_files =
    etc/caso/ = etc/caso/*

[entry_points]

oslo.config.opts =
    caso = caso.opts:list_opts

console_scripts =
    caso-extract = caso.cmd.extract:main

caso.extractors =
    nova = caso.extract.openstack.nova:NovaExtractor
    neutron = caso.extract.openstack.neutron:NeutronExtractor
    cinder = caso.extract.openstack.cinder:CinderExtractor

caso.messenger = 
    noop = caso.messenger.noop:NoopMessenger
    ssm = caso.messenger.ssm:SSMMessenger
    ssmv4 = caso.messenger.ssm:SSMMessengerV04
    logstash = caso.messenger.logstash:LogstashMessenger

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = caso/locale
domain = caso

[update_catalog]
domain = caso
output_dir = caso/locale
input_file = caso/locale/caso.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = caso/locale/caso.pot
